# plant-disease

./: .gitignore  .pre-commit-config.yaml  cache.db  pyproject.toml
src/: main.py
src/analysis/: analysis.ipynb  annotation_verification.ipynb  class_distribution.ipynb  initial_analysis.ipynb
src/annotation/: labeling.py
src/annotation/studio_backend/: Dockerfile  README.md  _wsgi.py  model.py  test_api.py  utils.py
src/conf/: config.yaml
src/conf/annotations/: project.yaml
src/conf/models/: cnn.yaml  fr-cnn.yaml  resnet.yaml
src/conf/models/params/cnn/: params.yaml
src/conf/models/params/fr-cnn/: params.yaml  params2.yaml  params3.yaml  params4.yaml
src/conf/models/params/resnet/: params.yaml  params1.yaml  params2.yaml
src/model/: __init__.py  cnn.py  lightning.py  models.py  train.py
src/preprocessing/: dataloader.py
src/utils/: draw_annotations.py  features.py  mlflow.py
