[tool.poetry]
name = "plant-disease"
version = "0.1.0"
description = ""
authors = ["Michał Zaręba <michal.zareba@softwaremill.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
ipykernel = "^6.29.5"
numpy = "^2.1.3"
torchvision = "^0.20.1"
matplotlib = "^3.9.3"
opencv-python = "^4.10.0.84"
helper = "^2.5.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
