[tool.poetry]
name = "plant-disease"
version = "0.1.0"
description = ""
authors = ["Michał Zaręba <michal.zareba@softwaremill.pl>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
numpy = "1.26.4"
matplotlib = "^3.9.3"
opencv-python = "^4.10.0.84"
helper = "^2.5.0"
tqdm = "^4.67.1"
pre-commit = "^4.0.1"
pyqt6 = "^6.7.1"
pillow = "^10.0.0"
hydra-core = "^1.3.2"
lightning = "^2.5.0.post0"
scikit-learn = "^1.6.0"
mlflow = "^2.19.0"
ultralytics = "^8.3.71"
label-studio-ml = {git = "https://github.com/HumanSignal/label-studio-ml-backend"}
torch = "^2.6.0"
torchvision = "^0.21.0"
label-studio = "^1.16.0"



[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
